# ringg-assignment

./: DESIGN.md  Dockerfile.k6  Dockerfile.mac  README.md  docker-compose.dev.yml  docker-compose.k6.yml  grafana-dashboard.json  k6.yml  load_test.js  pyproject.toml
app/: config.py  logger.py  main.py
app/core/: __init__.py  events.py
app/database/: __init__.py  base.py  connection.py  kafka_manager.py  main.py  score_manager.py
app/kafka/: __init__.py  base.py  consumer.py  main.py  processor.py
app/models/: data.py  response.py  score.py
app/routes/: __init__.py  health.py  leaderboard.py  score.py
tests/: leaderboard_test.js  load_test.js
tests/read/: latency.js  stress.js
tests/write/: latency.js  stress.js
