[tool.poetry]
name = "ring-assignment"
version = "0.1.0"
description = "High-performance leaderboard service"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
uvloop = "^0.19.0"
orjson = "^3.9.10"
redis = {extras = ["hiredis"], version = "^5.0.1"}
asyncpg = "^0.29.0"
sortedcontainers = "^2.4.0"
httpx = "^0.28.1"
aiofiles = "^24.1.0"
aiokafka = "^0.8.1"
kafka-python = "2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

